k8s/airflow-pod-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: airflow-worker
  namespace: airflow

spec:
  serviceAccountName: airflow
  restartPolicy: Never

  securityContext:
    fsGroup: 50000

  containers:
    - name: base
      image: navisafe-airflow:v10
      imagePullPolicy: IfNotPresent

      volumeMounts:
        - name: airflow-logs
          mountPath: /opt/airflow/logs


  volumes:
    - name: airflow-logs
      persistentVolumeClaim:
        claimName: airflow-logs-pvc
