k8s/airflow-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      serviceAccountName: airflow

      securityContext:
        runAsUser: 50000
        fsGroup: 50000

      volumes:
        - name: airflow-logs
          persistentVolumeClaim:
            claimName: airflow-logs-pvc

        - name: pod-template
          configMap:
            name: airflow-pod-template

      containers:
        - name: scheduler
          image: navisafe-airflow:latest
          imagePullPolicy: Never

          volumeMounts:
            - name: airflow-logs
              mountPath: /opt/airflow/logs

            - name: pod-template
              mountPath: /opt/airflow/pod_templates

          command:
            - bash
            - -c
            - airflow scheduler
