k8s/airflow-webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      serviceAccountName: airflow

      securityContext:
        runAsUser: 50000
        fsGroup: 50000

      volumes:
        - name: airflow-logs
          #emptyDir: {}
          persistentVolumeClaim:
            claimName: airflow-logs-pvc

        - name: pod-template
          configMap:
            name: airflow-pod-template

      containers:
        - name: webserver
          image: navisafe-airflow:v10
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: airflow-logs
              mountPath: /opt/airflow/logs

            - name: pod-template
              mountPath: /opt/airflow/pod_templates

          command:
            - bash
            - -c
            - airflow webserver
