k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navisafe-postgres
spec:
  serviceName: navisafe-postgres
  replicas: 1
  selector:
    matchLabels:
      app: navisafe-postgres
  template:
    metadata:
      labels:
        app: navisafe-postgres
    spec:
      containers:
        - name: postgres
          image: dndjeh/navisafe-postgres:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
