k8s/s3_raw_consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-raw-consumer
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: s3-raw-consumer

  template:
    metadata:
      labels:
        app: s3-raw-consumer

    spec:
      containers:
        - name: s3-raw-consumer
          image: dndjeh/navisafe-consumer:v1
          imagePullPolicy: Always

          command:
            - python
            - /app/consumers/s3_raw_consumer.py
