k8s/airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  type: NodePort
  selector:
    app: airflow-webserver
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30082
