k8s/backend-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: navisafe-backend-svc
spec:
  selector:
    app: navisafe-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
