k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dndjeh/navisafe-frontend:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
          command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30173
