k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navisafe-postgres
spec:
  selector:
    app: navisafe-postgres
  ports:
    - port: 5432
      targetPort: 5432
